NXT-2635: Always pass the local workspace instance along
Makes the code more transparent and maintainable.

NXT-2635 (Make LocalWorkspace not a singleton)